<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textViewComponentName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/component_name"
        android:textColor="@color/text_color_primary"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textViewComponentName"
        android:layout_marginTop="4dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one"
            android:background="@drawable/custom_radio_button"
            android:textColor="@drawable/font_state_radio_button"
            android:button="@android:color/transparent"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two"
            android:background="@drawable/custom_radio_button"
            android:textColor="@drawable/font_state_radio_button"
            android:button="@android:color/transparent"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three"
            android:background="@drawable/custom_radio_button"
            android:textColor="@drawable/font_state_radio_button"
            android:button="@android:color/transparent"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four"
            android:background="@drawable/custom_radio_button"
            android:textColor="@drawable/font_state_radio_button"
            android:button="@android:color/transparent"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five"
            android:background="@drawable/custom_radio_button"
            android:textColor="@drawable/font_state_radio_button"
            android:button="@android:color/transparent"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"/>
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>